Resolves: tdf#125866 null-deref

Change-Id: I0bd597498d10130928de5d7865219fe6f4bc8bcd